// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stylesheet basic 1`] = `
Object {
  "fileName": "index.html",
  "source": "<!DOCTYPE html><html lang=\\"en\\"><head></head><body>
              <link rel=\\"stylesheet\\" href=\\"1.css\\" integrity=\\"sha384-SI8Lww7SI7ojkIK+OHWMVYWT/SI2f5rkGslJMkk/3C9mILFt0yMwTK3mlZL+BTmO\\" crossorigin=\\"anonymous\\">
          
        </body></html>",
}
`;

exports[`stylesheet crossorigin attribute 1`] = `
Object {
  "fileName": "index.html",
  "source": "<!DOCTYPE html><html lang=\\"en\\"><head></head><body>
            <link rel=\\"stylesheet\\" href=\\"1.css\\" integrity=\\"sha384-SI8Lww7SI7ojkIK+OHWMVYWT/SI2f5rkGslJMkk/3C9mILFt0yMwTK3mlZL+BTmO\\" crossorigin=\\"use-credentials\\">
          
        </body></html>",
}
`;

exports[`stylesheet invalid hash algorithm 1`] = `
Object {
  "fileName": "index.html",
  "source": "<!DOCTYPE html><html lang=\\"en\\"><head></head><body>
            <link rel=\\"stylesheet\\" href=\\"1.css\\" integrity=\\"sha1-dph/sbf7TTz0ynQdi1KxFDfv1Sg=\\" crossorigin=\\"anonymous\\">
          
        </body></html>",
}
`;

exports[`stylesheet invalid link 1`] = `
Object {
  "fileName": "index.html",
  "source": "<!DOCTYPE html><html lang=\\"en\\"><head></head><body>
            <link rel=\\"stylesheet\\" href=\\"invalid.css\\">
          
        </body></html>",
}
`;

exports[`stylesheet multiple hash algorithms 1`] = `
Object {
  "fileName": "index.html",
  "source": "<!DOCTYPE html><html lang=\\"en\\"><head></head><body>
            <link rel=\\"stylesheet\\" href=\\"1.css\\" integrity=\\"sha256-CWcnFgaWAReWDakUpF4oUc3hOL5tBSLTPTAxbLA5sbg= sha384-SI8Lww7SI7ojkIK+OHWMVYWT/SI2f5rkGslJMkk/3C9mILFt0yMwTK3mlZL+BTmO sha512-OSSE/t48EtyjumYELSZNOWlSBXEq7qRMfHWCCtb0bbq4fDCWr07dsRtMVfk3Bi6Hi4H/oK1ba703f5bvlCIIvA== whirlpool-ysTPMKhdX5R3Rf4gggA3rE7bwgcs0vUkvWw5w4b5FOJtcxcgP6J0n2veREIJjBb9ptUrsSVi54ugn2JdLGZekA==\\" crossorigin=\\"anonymous\\">
          
        </body></html>",
}
`;

exports[`stylesheet remote 1`] = `
Object {
  "fileName": "index.html",
  "source": "<!DOCTYPE html><html lang=\\"en\\"><head></head><body>
            <link rel=\\"stylesheet\\" href=\\"https://raw.githubusercontent.com/JonasKruckenberg/rollup-plugin-sri/master/test/fixtures/1.css\\">
          
        </body></html>",
}
`;

exports[`stylesheet uppercase hash algorithms 1`] = `
Object {
  "fileName": "index.html",
  "source": "<!DOCTYPE html><html lang=\\"en\\"><head></head><body>
            <link rel=\\"stylesheet\\" href=\\"1.css\\" integrity=\\"sha256-CWcnFgaWAReWDakUpF4oUc3hOL5tBSLTPTAxbLA5sbg= sha384-SI8Lww7SI7ojkIK+OHWMVYWT/SI2f5rkGslJMkk/3C9mILFt0yMwTK3mlZL+BTmO sha512-OSSE/t48EtyjumYELSZNOWlSBXEq7qRMfHWCCtb0bbq4fDCWr07dsRtMVfk3Bi6Hi4H/oK1ba703f5bvlCIIvA==\\" crossorigin=\\"anonymous\\">
          
        </body></html>",
}
`;
